# opencl_fdfd

./: .gitignore  README.md  pyproject.toml  setup.py
opencl_fdfd/: VERSION.py  __init__.py  csr.py  main.py  ops.py
opencl_fdfd/kernels/: common.cl  e2h.cl  h2e.cl  p2e.cl
